# vocal-signature

./: .gitignore  CMakeLists.txt  README.md  a.out  checkout_classifier.py  fft_testing.cpp  inspect_model.py  model.onnx  model.py  revised_model.onnx  test_with_python.py  wave_testing.cpp  wrapper_init.py
data/: bonjour.aac  imitation.aac  mahenina.aac  nianga.aac  salama.aac  voice1.aac  voice2.aac
